fix discount screen frontend